# moonshine-flow

./: .gitignore  README.ja.md  README.llm.md  README.md  config.example.toml  pyproject.toml  transcription_corrections.example.toml
.github/workflows/: update-homebrew-formula-on-release.yml
Formula/: moonshine-flow.rb  ptarmigan-flow.rb
scripts/: install_brew.sh  install_launch_agent.sh  uninstall_launch_agent.sh
src/moonshine_flow/: __init__.py  __main__.py  app_bundle.py  audio_recorder.py  cli.py  config.py  daemon.py  homebrew_bootstrap.py  hotkey_monitor.py  launchd.py  logging_setup.py  output_injector.py  permissions.py  transcriber.py  transcription_corrections.py
src/ptarmigan_flow/: __init__.py  __main__.py  activity_indicator.py  activity_overlay.py  (+12 more)
tests/: test_activity_indicator.py  test_activity_overlay.py  test_app_bundle.py  test_audio_recorder.py  test_cli.py  test_cli_config_commands.py  test_cli_device_commands.py  test_cli_stt_commands.py  test_cli_update_command.py  test_config.py  test_daemon.py  test_formula_regressions.py  test_granite_mlx.py  test_homebrew_bootstrap.py  test_hotkey_monitor.py  test_launchd.py  test_llm_post_processor.py  test_mlx_whisper.py  test_mlx_whisper_backend.py  test_output_injector.py  test_permissions.py  test_realtime_capability.py  test_stt_factory.py  test_stt_model_families.py  test_stt_runtime_backend.py  test_transcriber.py  test_transcription_corrections.py  test_transcription_session.py  test_vllm_realtime.py  test_vllm_server.py  test_voxtral_mlx_backend.py  test_voxtral_transformers_backend.py
(+48 files in other folders)
